<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">OpenPods</string>

    <string name="intro1">This app lets you check the status of your AirPods on any Android device</string>
    <string name="intro2">To operate, we need permission to use Bluetooth LE (Location) and permission to run in background</string>
    <string name="introAllow">Allow</string>
    <string name="main_description">The app will show a notification when your AirPods are connected</string>
    <string name="hide_message">You can hide this app if you want</string>
    <string name="settings">Settings</string>

    <string name="noBtText">It looks like this device doesn\'t have Bluetooth LE</string>
    <string name="locationDisabledText">You need to turn on Location to allow OpenPods to read the status</string>
    <string name="supportedDevicesTitle"><u>Supported devices:</u></string>
    <string name="supportedDevicesItems">&#8226; Apple AirPods 1st gen\n&#8226; Apple AirPods 2nd gen\n&#8226; Apple AirPods Pro</string>

    <string name="batterySaver">Battery saver (Not recommended)</string>
    <string name="batterySaver_desc">Enable this if Bluetooth uses a lot of battery</string>
    <string name="hide">Hide app</string>
    <string name="hide_desc">Hide this app from the launcher</string>
    <string name="hideClicked">The icon will disappear soon</string>
    <!-- TODO: Update translations of new strings -->
    <string name="textonly" translatable="false">Text only notification (EXPERIMENTAL)</string>
    <string name="textonly_desc" translatable="false">Change to a smaller Text Only notification in order to save space</string>
    <string name="textonly_updating" translatable="false">Updating...</string>
    <string name="textonly_popupwindow_title" translatable="false">To enable text only mode you need to change your notification settings</string>
    <string name="textonly_popupwindow_desc1" translatable="false">In some phones you need to go to\n[Importance -> Low]</string>
    <string name="textonly_popupwindow_desc2" translatable="false">In other phones you need to enable [Minimize]</string>
    <string name="restart_service" translatable="false">Restart Service</string>

    <string name="about">About</string>
    <string name="about_dev">Developed by Federico Dossena</string>
    <string name="website">Website</string>
    <string name="github">Github</string>
    <string name="donate">Donate</string>
    <string name="fdroid" translatable="false">F-Droid</string>

    <!-- TODO: Update translations of new strings -->
    <string name="okay" translatable="false">Okay</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="whitespace" translatable="false">&#160;</string>
</resources>
