<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/app_name">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="batterySaver"
            android:summary="@string/batterySaver_desc"
            android:title="@string/batterySaver" />

        <Preference
            android:key="hideApp"
            android:summary="@string/hide_desc"
            android:title="@string/hide" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <Preference
            android:key="about"
            android:summary="@string/app_name"
            android:title="@string/about" />

        <Preference
            android:key="website"
            android:title="@string/website" />

        <Preference
            android:key="github"
            android:title="@string/github" />

        <Preference
            android:key="donate"
            android:title="@string/donate" />

    </PreferenceCategory>

</PreferenceScreen>